--- a/package.json
+++ b/package.json
@@ -65,6 +65,11 @@
     "webpack": "5.21.2",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3"
+    "webpack-merge": "5.7.3",
+    "style-loader": "2.0.0",
+    "css-loader": "5.0.2",
+    "less-loader": "8.0.0",
+    "postcss-loader": "5.0.0",
+    "sass-loader": "11.0.1"
   }
 }
