--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "10.2.4",
     "babel-loader": "8.2.2",
     "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "@babel/plugin-syntax-import-meta": "7.10.4",
     "cssnano": "4.1.10",
     "graphql": "15.5.0",
     "history": "4.10.1",
