--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "start:server": "npm run setup && npm run build:server"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "@apollo/client": "3.3.10",
     "@reduxjs/toolkit": "1.5.0",
+    "antd": "4.12.3",
     "autoprefixer": "10.2.4",
     "babel-loader": "8.2.2",
     "babel-plugin-transform-decorators-legacy": "1.3.5",
@@ -43,8 +45,7 @@
     "redux-dynamic-middlewares": "2.0.0",
     "redux-thunk": "2.3.0",
     "sass": "1.32.7",
-    "store": "2.0.12",
-    "antd": "4.12.3"
+    "store": "2.0.12"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
@@ -70,6 +71,7 @@
     "css-loader": "5.0.2",
     "less-loader": "8.0.0",
     "postcss-loader": "5.0.0",
-    "sass-loader": "11.0.1"
+    "sass-loader": "11.0.1",
+    "eslint": "7.20.0"
   }
 }
