--- a/package.json
+++ b/package.json
@@ -60,22 +60,23 @@
     "@babel/preset-react": "7.12.13",
     "@types/react": "17.0.2",
     "babel-core": "6.26.3",
+    "babel-eslint": "10.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "5.1.0",
-    "mini-css-extract-plugin": "1.3.6",
-    "react-hot-loader": "4.13.0",
-    "webpack": "5.21.2",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3",
-    "style-loader": "2.0.0",
     "css-loader": "5.0.2",
-    "less-loader": "8.0.0",
-    "postcss-loader": "5.0.0",
-    "sass-loader": "11.0.1",
     "eslint": "7.20.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "babel-eslint": "10.1.0"
+    "html-webpack-plugin": "5.1.0",
+    "less-loader": "8.0.0",
+    "mini-css-extract-plugin": "1.3.6",
+    "postcss-loader": "5.0.0",
+    "prop-types": "^15.7.2",
+    "react-hot-loader": "4.13.0",
+    "sass-loader": "11.0.1",
+    "style-loader": "2.0.0",
+    "webpack": "5.21.2",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "5.7.3"
   }
 }
