--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "redux-dynamic-middlewares": "2.0.0",
     "redux-thunk": "2.3.0",
     "sass": "1.32.7",
-    "store": "2.0.12"
+    "store": "2.0.12",
+    "query-string": "6.14.1"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
