--- a/package.json
+++ b/package.json
@@ -24,30 +24,31 @@
   "dependencies": {
     "@ant-design/icons": "4.5.0",
     "@apollo/client": "3.3.10",
+    "@babel/plugin-syntax-import-meta": "7.10.4",
     "@reduxjs/toolkit": "1.5.0",
     "antd": "4.12.3",
     "autoprefixer": "10.2.4",
     "babel-loader": "8.2.2",
     "babel-plugin-transform-decorators-legacy": "1.3.5",
-    "@babel/plugin-syntax-import-meta": "7.10.4",
     "cssnano": "4.1.10",
     "graphql": "15.5.0",
     "history": "4.10.1",
     "immutable": "4.0.0-rc.12",
     "parcel-bundler": "1.12.4",
     "postcss-url": "10.1.1",
+    "query-string": "6.14.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-portal": "4.2.1",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
+    "react-uuid": "^1.0.2",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-dynamic-middlewares": "2.0.0",
     "redux-thunk": "2.3.0",
     "sass": "1.32.7",
-    "store": "2.0.12",
-    "query-string": "6.14.1"
+    "store": "2.0.12"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
