--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "history": "4.10.1",
     "immutable": "4.0.0-rc.12",
     "parcel-bundler": "1.12.4",
+    "path-to-regexp": "2.4.0",
     "postcss-url": "10.1.1",
     "query-string": "6.14.1",
     "react": "17.0.1",
