--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "postcss-loader": "5.0.0",
     "prop-types": "^15.7.2",
     "react-hot-loader": "4.13.0",
+    "redux-mock-store": "^1.5.4",
     "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
     "webpack": "5.21.2",
