--- a/package.json
+++ b/package.json
@@ -21,6 +21,42 @@
     "start:prod": "npm run setup && npm run build:prod",
     "start:server": "npm run setup && npm run build:server"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "^framework(.*)$": "<rootDir>/../front_framework/public_html$1",
+      "^@master(.*)$": "<rootDir>/src/@master$1",
+      "^@members(.*)$": "<rootDir>/src/@members$1",
+      "^components(.*)$": "<rootDir>/src/components$1",
+      "^api(.*)$": "<rootDir>/src/api$1",
+      "^actions(.*)$": "<rootDir>/src/actions$1",
+      "^reducers(.*)$": "<rootDir>/src/reducers$1",
+      "^selectors(.*)$": "<rootDir>/src/selectors$1",
+      "^classes(.*)$": "<rootDir>/src/classes$1",
+      "^helpers(.*)$": "<rootDir>/src/helpers$1",
+      "^hooks(.*)$": "<rootDir>/src/hooks$1",
+      "^imports(.*)$": "<rootDir>/src/imports$1",
+      "^modules(.*)$": "<rootDir>/src/modules$1",
+      "^validation(.*)$": "<rootDir>/src/validation$1",
+      "^store(.*)$": "<rootDir>/src/store$1",
+      "^__mocks__(.*)$": "<rootDir>/src/__mocks__$1"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx",
+      "css"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/node_modules/**"
+    ],
+    "rootDir": "./"
+  },
   "dependencies": {
     "@ant-design/icons": "4.5.0",
     "@apollo/client": "3.3.10",
@@ -44,6 +80,7 @@
     "react-redux": "7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "5.2.0",
+    "jest": "26.6.3",
     "react-uuid": "^1.0.2",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
