--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@babel/plugin-proposal-function-sent": "7.12.13",
     "@babel/plugin-proposal-pipeline-operator": "7.12.13",
     "@babel/plugin-proposal-throw-expressions": "7.12.13",
+    "@babel/plugin-transform-runtime": "7.13.9",
     "@babel/preset-react": "7.12.13",
     "@types/react": "17.0.2",
     "babel-core": "6.26.3",
