--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.7.3",
-    "jest-cli": "26.6.3"
+    "jest-cli": "26.6.3",
+    "babel-jest": "24.9.0"
   }
 }
