--- a/package.json
+++ b/package.json
@@ -103,16 +103,19 @@
     "@types/react": "17.0.2",
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
+    "babel-jest": "24.9.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "5.0.2",
     "eslint": "7.20.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "5.1.0",
+    "jest-cli": "26.6.3",
     "less-loader": "8.0.0",
     "mini-css-extract-plugin": "1.3.6",
     "postcss-loader": "5.0.0",
     "prop-types": "^15.7.2",
+    "react-context-devtool": "^2.0.3",
     "react-hot-loader": "4.13.0",
     "redux-mock-store": "^1.5.4",
     "sass-loader": "11.0.1",
@@ -120,8 +123,6 @@
     "webpack": "5.21.2",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3",
-    "jest-cli": "26.6.3",
-    "babel-jest": "24.9.0"
+    "webpack-merge": "5.7.3"
   }
 }
