--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "graphql": "15.5.0",
     "history": "4.10.1",
     "immutable": "4.0.0-rc.12",
+    "jest": "26.6.3",
+    "lodash": "^4.17.21",
     "parcel-bundler": "1.12.4",
     "path-to-regexp": "2.4.0",
     "postcss-url": "10.1.1",
@@ -80,7 +82,6 @@
     "react-redux": "7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "5.2.0",
-    "jest": "26.6.3",
     "react-uuid": "^1.0.2",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
