--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
     "webpack": "5.21.2",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.7.3"
