--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "IE 11",
     "not OperaMini all"
   ],
-  "author": "JS Team",
+  "author": "Taras Rushchak",
   "license": "CRM. All rights reserved",
   "scripts": {
     "clean": "rm dist/bundle.js",
@@ -22,42 +22,6 @@
     "start:server": "npm run setup && npm run build:server",
     "start": "node server.js",
     "heroku-postbuild": "npm run build:prod"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js",
-      "^framework(.*)$": "<rootDir>/../front_framework/public_html$1",
-      "^@master(.*)$": "<rootDir>/src/@master$1",
-      "^@members(.*)$": "<rootDir>/src/@members$1",
-      "^components(.*)$": "<rootDir>/src/components$1",
-      "^api(.*)$": "<rootDir>/src/api$1",
-      "^actions(.*)$": "<rootDir>/src/@member/actions$1",
-      "^reducers(.*)$": "<rootDir>/src/@member/reducers$1",
-      "^selectors(.*)$": "<rootDir>/src/@member/selectors$1",
-      "^classes(.*)$": "<rootDir>/src/classes$1",
-      "^helpers(.*)$": "<rootDir>/src/helpers$1",
-      "^hooks(.*)$": "<rootDir>/src/hooks$1",
-      "^imports(.*)$": "<rootDir>/src/imports$1",
-      "^modules(.*)$": "<rootDir>/src/modules$1",
-      "^validation(.*)$": "<rootDir>/src/validation$1",
-      "^store(.*)$": "<rootDir>/src/store$1",
-      "^__mocks__(.*)$": "<rootDir>/src/__mocks__$1"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "jsx",
-      "css"
-    ],
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "collectCoverageFrom": [
-      "**/*.{js,jsx}",
-      "!**/node_modules/**"
-    ],
-    "rootDir": "./"
   },
   "dependencies": {
     "@ant-design/icons": "4.5.0",
@@ -73,7 +37,7 @@
     "history": "4.10.1",
     "immutable": "4.0.0-rc.12",
     "jest": "26.6.3",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "parcel-bundler": "1.12.4",
     "path-to-regexp": "2.4.0",
     "postcss-url": "10.1.1",
@@ -82,9 +46,9 @@
     "react-dom": "17.0.1",
     "react-portal": "4.2.1",
     "react-redux": "7.2.2",
-    "react-router": "^5.2.0",
+    "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-uuid": "^1.0.2",
+    "react-uuid": "1.0.2",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-dynamic-middlewares": "2.0.0",
@@ -108,7 +72,7 @@
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
     "babel-jest": "24.9.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.2",
     "eslint": "7.20.0",
     "eslint-plugin-react": "7.22.0",
@@ -118,14 +82,14 @@
     "less-loader": "8.0.0",
     "mini-css-extract-plugin": "1.3.6",
     "postcss-loader": "5.0.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.7.2",
     "react-context-devtool": "^2.0.3",
     "react-hot-loader": "4.13.0",
-    "redux-mock-store": "^1.5.4",
+    "redux-mock-store": "1.5.4",
     "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
     "webpack": "5.21.2",
-    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-bundle-analyzer": "4.4.0",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.7.3"
