[CF-125][master] - add production build

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "start:dev": "npm run setup && npm run build:dev",
     "start:prod": "npm run setup && npm run build:prod",
     "start:server": "npm run setup && npm run build:server",
-    "start": "node server.js",
-    "heroku-postbuild": "npm run build:prod"
+    "start": "node server.js"
   },
   "dependencies": {
     "@ant-design/icons": "4.5.0",
