--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "build:prod": "webpack --config webpack.prod.js",
-    "build:dev": "webpack serve --config webpack.dev.js --progress",
+    "build:dev": "NODE_ENV=development webpack serve --config webpack.dev.js --progress",
     "start:dev": "npm run setup && npm run build:dev",
     "start:prod": "npm run setup && npm run build:prod",
     "start:server": "npm run setup && npm run build:server",
