--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "@babel/plugin-proposal-throw-expressions": "7.12.13",
     "@babel/plugin-transform-runtime": "7.13.9",
     "@babel/preset-react": "7.12.13",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/react": "17.0.2",
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
