--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "redux-thunk": "2.3.0",
     "sass": "1.32.7",
     "store": "2.0.12",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "moment": "2.29.1"
   },
   "devDependencies": {
     "@babel/core": "7.12.16",
